[bug] Fix white space wrapping

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -28,6 +28,7 @@
   justify-content: flex-end;
   padding: 0 2vw;
   background-color: $discord-dark;
+  white-space: nowrap;
 }
 
 .logo {
